<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/meeting" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="52dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="30dp"
                android:shadowColor="@color/text_shadow"
                android:shadowDx="-5"
                android:shadowDy="-5"
                android:shadowRadius="1"
                android:text="Créez votre réunion"
                android:textAlignment="center"
                android:textColor="#F3F1F1"
                android:textIsSelectable="false"
                android:textSize="34sp"
                app:flow_horizontalAlign="center"
                app:flow_verticalAlign="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardContainer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="40dp"
                app:cardBackgroundColor="#E6DFDF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/cardHour"
                app:layout_constraintTop_toBottomOf="@+id/textView">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="75dp"
                    android:layout_marginTop="12dp"
                    android:hint="Lieu de la réunion"
                    android:textSize="17dp" />

                <Spinner
                    android:id="@+id/spinnerPlace"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:inputType="text" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardHour"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="56dp"
                android:layout_marginEnd="40dp"
                app:cardBackgroundColor="#E6DFDF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardContainer">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:hint="Heure de la réunion"
                    android:inputType="time"
                    android:maxLength="2" />

                <Button
                    android:id="@+id/buttonHour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:text="Choisir une heure" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/CardDuration"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="56dp"
                android:layout_marginEnd="40dp"
                app:cardBackgroundColor="#E6DFDF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardHour">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:hint="Durée de la réunion"
                    android:inputType="time"
                    android:maxLength="2" />

                <Spinner
                    android:id="@+id/spinnerDuration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:inputType="text" />

            </androidx.cardview.widget.CardView>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="58dp"
                android:layout_marginEnd="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/CardDuration">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/topic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Sujet de la réunion"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="58dp"
                android:layout_marginEnd="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout3">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/mail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Email"
                    android:inputType="textEmailAddress" />


            </com.google.android.material.textfield.TextInputLayout>

            <HorizontalScrollView
                android:id="@+id/emailsListContainer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textInputLayout4"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout4">

                <LinearLayout
                    android:id="@+id/emailsList"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" />
            </HorizontalScrollView>

            <Button
                android:id="@+id/register_meeting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="40dp"
                android:clickable="true"
                android:text="Programmer"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emailsListContainer" />

            <ImageButton
                android:id="@+id/saveEmail"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:backgroundTint="#E1D6D6"
                android:gravity="center"
                android:textColor="@color/teal_700"
                app:layout_constraintBottom_toBottomOf="@+id/textInputLayout4"
                app:layout_constraintEnd_toEndOf="@+id/textInputLayout4"
                app:layout_constraintTop_toTopOf="@+id/textInputLayout4"
                app:layout_constraintVertical_bias="0.303"
                app:srcCompat="@drawable/bouton_add_meeting"
                app:tint="#724CAF" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</FrameLayout>