...
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:text="TextView qzdqzdqzdqzdqzdqzdzqdqzdqdqzdqzdqzdqzdqzdqzdqdqdqdqzdqdqdqzqdqzd  qzdqzqdzdqzdq"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@id/buttonTrash"
        app:layout_constraintStart_toEndOf="@+id/iconeMeeting"
        app:layout_constraintTop_toBottomOf="@+id/textPLace" />

    <ImageView
        android:id="@+id/iconeMeeting"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="15dp"
...
